--- a/Beginner projects/Login system/views/register.ejs
+++ b/Beginner projects/Login system/views/register.ejs
@@ -25,7 +25,21 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="card social-block">
+                    <div class="card-body">
+                        <a class="btn btn-block" href="/auth/google" role="button">
+                            <i class="fab fa-google"></i>
+                            Sign Up with Google
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
+    
 
 
     <%- include('partials/footer') %>
